[project]
name = "rainrunoffresourcesmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "geopandas>=1.1.2",
    "h5netcdf>=1.8.0",
    "netcdf4>=1.7.4",
    "pandas>=2.3.3",
    "pywr>=1.29.0",
    "rioxarray>=0.20.0",
    "scipy>=1.17.0",
    "tqdm>=4.67.1",
    "xarray>=2025.12.0",
]
